--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
   ],
   "exports": {
     ".": {
-      "import": "./dist/index.js",
-      "require": "./dist/index.cjs",
-      "types": "./dist/src/index.d.ts"
+      "types": "./dist/src/index.d.ts",
+      "import": "./src/index.ts",
+      "require": "./dist/index.cjs"
     }
   },
   "main": "dist/index.cjs",
